Bug fix - spacing issue on FinalScore component on Chrome

--- a/src/components/Score/FinalScore.css
+++ b/src/components/Score/FinalScore.css
@@ -4,11 +4,8 @@
     align-items: center;
     flex-direction: column;
     color: rgb(240, 240, 240);
-    background-color: rgba(0, 0, 0, 0.6);
-    backdrop-filter: blur(8px);
     font-weight: 800;
     width: 80%;
-    border-radius: 15px;
     margin: 0.5rem 0;
 }
 
@@ -17,7 +14,9 @@
     justify-content: space-around;
     height: 50vh;
     width: 100%;
-    position: absolute;
+    background-color: rgba(0, 0, 0, 0.6);
+    border-radius: 15px;
+    backdrop-filter: blur(0.6rem);
 }
 
 .newBest {
